# ChangeLog for www-client/chromium
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.1120 2014/08/19 17:38:11 phajdan.jr Exp $

*chromium-38.0.2125.0 (19 Aug 2014)

  19 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-36.0.1985.125.ebuild, -chromium-38.0.2114.2.ebuild,
  +chromium-38.0.2125.0.ebuild, +files/chromium-system-jinja-r6.patch:
  Dev channel bump. Use system jinja, ply, markupsafe. Remove old.

  17 Aug 2014; Agostino Sarubbo <ago@gentoo.org> chromium-36.0.1985.143.ebuild:
  Stable for x86, wrt bug #519788

  13 Aug 2014; Richard Freeman <rich0@gentoo.org>
  chromium-36.0.1985.143.ebuild:
  amd64 stable - 519788

*chromium-38.0.2121.3 (13 Aug 2014)

  13 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +chromium-38.0.2121.3.ebuild, -chromium-38.0.2107.2.ebuild:
  Dev channel bump. Remove old.

*chromium-36.0.1985.143 (13 Aug 2014)

  13 Aug 2014; Mike Gilbert <floppym@gentoo.org> +chromium-36.0.1985.143.ebuild:
  Stable channel bump.

*chromium-37.0.2062.68 (08 Aug 2014)

  08 Aug 2014; Mike Gilbert <floppym@gentoo.org> +chromium-37.0.2062.68.ebuild,
  -chromium-37.0.2062.44.ebuild:
  Beta channel bump.

*chromium-38.0.2114.2 (06 Aug 2014)

  06 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-37.0.2062.35.ebuild, -chromium-38.0.2101.0.ebuild,
  +chromium-38.0.2114.2.ebuild:
  Dev channel bump. Remove old.

*chromium-37.0.2062.58 (31 Jul 2014)

  31 Jul 2014; Mike Gilbert <floppym@gentoo.org> +chromium-37.0.2062.58.ebuild,
  +files/chromium-angle-r1.patch:
  Beta channel bump.

*chromium-38.0.2107.2 (30 Jul 2014)

  30 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-37.0.2062.44.ebuild, -chromium-38.0.2096.0.ebuild,
  +chromium-38.0.2107.2.ebuild, +files/chromium-ffmpeg-r3.patch:
  Dev channel bump. Fix bug #513048 by mgorny. Remove old.

*chromium-37.0.2062.44 (30 Jul 2014)
