@@ -48,26 +48,26 @@ DIST chromium-38.0.2121.3-lite.tar.xz 229671460 SHA256 cc949dfc901c187be7005d8e6
 DIST chromium-38.0.2125.0-lite.tar.xz 240854272 SHA256 8e7c6828daa42d871661835a64e7f7555a0fb4eb408bf88eaa5f5b7b232ac8b9 SHA512 bbc60eb03654947bf4fe01e4323e44d2c63a47ae93993fef4fd2d12abcf100852d6df128dc55fb775a34fbab3f3fe95bd212b8e47cae574efebb5b76f38bf5c4 WHIRLPOOL f4e173703c83c1af5b7f723f8b4ae1b25a023eb131c5ef43aca01a7cc84f19b02082e83fa9e26aff806c48bdb3cc2ab784c78915748c84d043cd6f265fbeae1c
 EBUILD chromium-36.0.1985.143.ebuild 20024 SHA256 1263170531138f9902dbd7cd19fe72981faa6340f249a23df06b16b7178a88b5 SHA512 f2301d5b4ea84ea099321da425ac12cfe64981cd60b363102c19a73782cfff54b8967cbb7201e5f788de3a4a7c4dd40459063827e3c134d19368cc4fee7db286 WHIRLPOOL 25acced43e55f7bd48b1750f8f218e180bd4dde31d639cfd3b300bf90d9e83cd583d9b7957af5dd3e1b5150a5f6fbd559cf21a69e590645cb25f35ed5c18d697
 EBUILD chromium-37.0.2062.58.ebuild 17702 SHA256 53ae7801b55bf637c69512e1191d73486326b2cf0dfb4aff249cbb5cf033591d SHA512 e9e9985fe9fddf4ebc6f5c312fee4d7915dd52d16060faaf5199e0b156d017410290f4d1bd41e39f1a2e1be490865d3a38804389c62f8a507adf021dab063dcc WHIRLPOOL 9147dfcd2c8a97c7b9fdb2c23eae4a7369eda5189d557a8c99dc7c85a3da4dcb230e139d1b88d30252ce6eb9a6651d70f0cd8fc56f207d0974ddd2d954ea66fb
-EBUILD chromium-37.0.2062.68.ebuild 17702 SHA256 396066ae3faf329f27d4e433797164b07ed5cddc75fadce3101001d6af0a04c6 SHA512 39c59a84062ae4e8f2bcb27ab78bbe2c66f53679b1df19df92ebde9f7cf3228c0696f424b7a8784daab9d5bb2f3d02a59df74f500b9131c1ba567992b233b445 WHIRLPOOL f2d807dfa0b1ba959967d8a9d99a711bb7bafa8edc0c16263f82f1a84fcf0ca6b7269dddc91ae497e3c657c3740e6ee2597114f464ea6e7a3454b86b61bd881e
+EBUILD chromium-37.0.2062.68.ebuild 17712 SHA256 28c3684becc192b9752b1740d456883d7aaa36ac1c2a3a9a598edec3280f5164 SHA512 a6a34b713381a9b4be6b7f71f64c0c6a76e93e0aff9af0051ae4f77498d1d2630cc88c63564c543a64f34a3e60a2d00c6512e5ad7daa194c1040efff585f7985 WHIRLPOOL 34d21c277bf7207bfe9272bf35be6487f5eaa5bf79d5a087a5e56f55d1c4d72c4c52583fb59f25982bd88f3cb4aea8c5b3299c2f09e49d7a94f7bc2daa57c530
 EBUILD chromium-38.0.2121.3.ebuild 17647 SHA256 671704d7223cb56a0668cc0781d1bab3d883be8554f9dce8480acb157c398d99 SHA512 1e4174c457d01fa4daf909b664c7bf086ad40060b2fbaf3f02e43941793263af0a0efb7c1c3ca767d0bc8c121111b69f1e035d6a80b1d1afd02d0bf1b40226f2 WHIRLPOOL 92a7be1f857ecf7c9d7eb320810958de2d16a0e83b00ba3802a39c65dc1224f516667798a829938f9aa01fde89fcdb550f555bfc47e15a2492d43e9a0ec94e46
-EBUILD chromium-38.0.2125.0.ebuild 18282 SHA256 0ed13e0704e518e4efd02eb93cbc6c9cf08875102d7f7cd94a42b911e343b9ff SHA512 33f0d97d002396efe4b664edd03a0bcb088f8f55a547219e9f92c1c44b74e5c0f61720c8479902bc7f57268fb8ab96bdcc439118da2719cee982757b58000eec WHIRLPOOL 9767cff3ad365cfe2117db912dd44f146f1257969550291f02d96c84ddd267792fc4239e8b688e583f8ee629c3bc89c11f25665ef9192d3974ca2aefb2a14aa9
-MISC ChangeLog 113185 SHA256 c4bc9446f80b4ce43038454cde39456d1de2bc1660f3fbc11e66085a5a190a8b SHA512 d55fc4b3bd3cabe357f9d57d839093778a2ea673ea4359fed826a191bb57a4b5d4dc8415bcf88e76dd746f696c6b98089183bd9fd71cb3366dc0ccb209241789 WHIRLPOOL f89b703ae0514a65e27f439936396cf3ed3a608ea46e11abc77a841326e566443e37d6d8d6ff6cbbd57f8a825b3c43e7aa6f6c7d71664bbc63bf7a87a4f093aa
+EBUILD chromium-38.0.2125.0.ebuild 18289 SHA256 c3f626f4ecee6dc96b191a7fe70e375cf01a8459a104d833a1b64b87082a09c0 SHA512 9562dfb85d48146e7ae63ec9615e8be1c8db7dca69b7e25fcb1ec4ac976197fde84721eb6c2248fbc5610d525883e68b219b438e0c0fb3227cfa18eec3edaf82 WHIRLPOOL 75c50af5d2679a6b5993db16dd38aa222ab4be91ec74a6edd412e91f27480fa4ab02de9c49370a5518306d0848043ba46b628d19eb0aabb1b1aeed529e242f1b
+MISC ChangeLog 113380 SHA256 8b8c95a9216904d08ae5589839abfe2c3d0bbff931fd192a922f395dc9bbf64f SHA512 2b105418a6e9a1e4eb3eba568477bc1e8a4cdb347f28c411d6ece68b974b20d2f859056734236793f37a98009290de29b69cee8861efee80132bd1bbceba0eca WHIRLPOOL 98fae52ab725f70643c0dc092a9311ebed3945f47f80ab5cfb4a6e137ffa605ac1b71659de2bd7bca3f0905dbb82afd5fad25d780b08133991b258ad406cf6fa
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC metadata.xml 518 SHA256 821944f32fcf203b2573c164aeaa52fbc69e5f651d366cdda66901633461f5ef SHA512 01d29c4ce93a8a624fc8926e7e72e8bf124b91ae6fdbf6e7179e9d6ddd6db33d73acde62541777118da1c9d197c83d6c615c247d785e76a8ab560f915abd08d5 WHIRLPOOL f9b21a0d032d1f78b6aeb78f759b9f126b1b1cc118a5edd3a08eefcb2d7b51ff406abb95323fe05b4c04468aca68dddd3d39ce7edfb9b352abc1bc3890d7e1ab
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT84uLAAoJEE8aJVXqcZkdfhoP/00/KS+x63ZFbMpjjXbJWI24
-3dVztoBoHPZt17VRtf8Xq2Zg2U47ZlPooBOsUrlfSx0fAL6bJ7JuY3/Za+x5G32k
-jz9FskptSpK37Q9GXwXlchUrjg/z5/cqiSj/nusmMPjw9tMb0Z8E5uJfWMIeSD65
-oJBBW+gcxggoR42B098bCTkpU3mXS+DDdceg/PPySAtvjRlV0cUkGdWR/xgMs2Pn
-8pzOXOs4SGtq21ClP5Pa4TGg/Pmp6qALzFNL/scf5SHIJjjCOwYy5pmJI3WGUoUH
-URPdr1UugDx0eDLRjWHnbLCdf3jd+CJGG2VOaI85f0HeRClOW9Out8pH6Mlr/bsQ
-IS695unKWEQyrRUlK/H+e3x5fYA/TOdSBBUixWPCRN4KQ5E9C6AM/ArYx8yhvvNY
-ItRl9EJtJ5prIt9/hRpjD9nneh9ZNVCuq5ZcGo54y+UvDKJiquwnGrlpzAVSmqko
-VapPKLuq9wiOn2aBZZzeqgq6LktWTFNe6T5Z3GLV1cEhDZBFE6Q9R44AhlhDXppe
-uKncP7Pup37FJO3NSUfD8scTyeuQDB6zuwbMtKZa+xuLZ6toRl9LtT917Oadw/+R
-4Jc8va3UoMEV1sB/0owVEWliFyOIbhECkf992ocBarXp2FYOlFcOA3DCYtdjE7Ah
-UnSke6ub34KzErL9MtZp
-=F87a
+iQIcBAEBCAAGBQJT9uvjAAoJEE8aJVXqcZkdkakQALtPpjvCqQBWdCyZpXqK6WXx
+aDm8WM0e+GsELpZqzGTsLO7UlDlbtKuJUivnuKp5Nfih81a7MlfG6llm6383ayCS
+DKU/sv6HqpLyRW6KVXLH9zugIrKTLbh0n2UacM/GAMiIzSB2Nq375NGFCKNwqNbs
+Hsh4Rm0HUcjF+LG7p4X425mguVMkL5TYoFV8fxaNsWs83LanHqX/3q0a7n2aSbfw
+Lbq1noqLynIjuSnanRpA618Ebdvt3xJjbtvkk3oCu0Y/N0JCi873O/iKDTFzaN/4
+5Xk2t5ii8BzqkC0VP+YyauXf7LvRs5R9SostP7MdkIdtBJyuIhUfmy4RqYPYg4Xz
+IRyqv3mxdVErJp0u54J1xsQptbj14hrWnRIn5ZpFrVMDVZTdzkBprIvmGSvq8ODx
+GkH8ofJVy2lsLrZCfklaSymtt1djZF9hVl6/+xhoZdg0vNDfBySO6vU79CdgJqxM
+nhEU9hZ2DhG7nsuOuo3mw4Nc80Q3GMpTDWptVmZ+7IBAhFT68kdol9hJHALPG7X6
+s9Sra7ACaj/X3MQoQ1pdeU6GU9Shu37AgNbJgtuBdcHUd0ZjlCUJqSFqEgU+jLi5
+ULShOSWXCzQdlmJfJLlQ4Zco7cnnkE55py5OONDpWoy0CERLCXr4AnenQbze3SHE
+I5pH7U0GTlGWhbC34j1D
+=/OAA
 -----END PGP SIGNATURE-----
